# Phat2meet-CloseBeta

./: README.md
Phat2meet-ClosedBeta-UI/: package.json
Phat2meet-ClosedBeta-UI/public/: index.css
Phat2meet-ClosedBeta-UI/src/: App.jsx  index.jsx
Phat2meet-ClosedBeta-UI/src/components/: index.js
Phat2meet-ClosedBeta-UI/src/components/Account/: Account.jsx
Phat2meet-ClosedBeta-UI/src/components/Atoms/: Foundation.jsx
Phat2meet-ClosedBeta-UI/src/components/AvailabilityEditor/: AvailabilityEditor.jsx
Phat2meet-ClosedBeta-UI/src/components/AvailabilityViewer/: AvailabilityViewerStyles.jsx
Phat2meet-ClosedBeta-UI/src/components/Button/: Button.styles.js
Phat2meet-ClosedBeta-UI/src/components/CalendarField/: CalendarField.styles.js
Phat2meet-ClosedBeta-UI/src/components/Identity/: AccountSelectModal.jsx  Atoms.jsx  Button.styles.js  ConnectWalletButton.jsx
Phat2meet-ClosedBeta-UI/src/components/Legend/: Legend.jsx  LegendStyles.js
Phat2meet-ClosedBeta-UI/src/components/Parachain/: EndpointAddressInput.jsx
Phat2meet-ClosedBeta-UI/src/components/ProviderInfo/: ProviderInfo.jsx
Phat2meet-ClosedBeta-UI/src/components/SelectField/: selectFieldStyle.jsx
Phat2meet-ClosedBeta-UI/src/components/Settings/: Settings.jsx  Settings.styles.js
Phat2meet-ClosedBeta-UI/src/context/: ContextProvider.jsx  ContractCall.jsx  EventContext.jsx
Phat2meet-Contract/: Cargo.toml  README.md
Phat2meet-Contract/src/: lib.rs
Phat2meet-UI/: .gitignore  README.md  index.html
Phat2meet-UI/src/Atoms/: EndpointsAtom.jsx
Phat2meet-UI/src/context/: ContractCall.jsx
Phat2meet-UI/src/contract/: phat2meet.json
Phat2meet-UI/src/services/: index.js
(+21 files in other folders)
